--- a/src/com/simple/ipeer/bc/gui/EntrySettingsGUI.form
+++ b/src/com/simple/ipeer/bc/gui/EntrySettingsGUI.form
@@ -2,7 +2,7 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="0"/>
+    <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="Backup Entry Editor"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
@@ -70,6 +70,10 @@
   </Layout>
   <SubComponents>
     <Component class="javax.swing.JTextField" name="entryPath">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="entryPath.setEditable(false);"/>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
@@ -80,6 +84,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="&lt;backupdir&gt;/path/to/existing/file/"/>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
@@ -88,11 +95,17 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="extensionsList">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JButton" name="addEntryButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="Add"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addEntryButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
